--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,22 @@
 :root {
-    /* Кольори макету */
+  /* Кольори макету */
 
-    --main-clr: #2196F3;
-    --dark-grey-clr: #2F303A;
-    --light-clr: #F5F5F5;
-    --light-grey-clr: #F5F4FA;
-    --grey-txt-clr: #757575;
-    --dark-txt-clr: #212121;
-    --light-txt-clr: #FFFFFF;
-    --foot-grey-clr: rgba(255, 255, 255, 0.6);
-    --dark-clr: #000000;
-    --btn-clr: #188CE8;
+  --main-clr: #2196f3;
+  --dark-grey-clr: #2f303a;
+  --light-clr: #f5f5f5;
+  --light-grey-clr: #f5f4fa;
+  --grey-txt-clr: #757575;
+  --dark-txt-clr: #212121;
+  --light-txt-clr: #ffffff;
+  --foot-grey-clr: rgba(255, 255, 255, 0.6);
+  --dark-clr: #000000;
+  --btn-clr: #188ce8;
+  --icon-color: #afb1b8;
 
+  /* Шрифти макету */
 
-    /* Шрифти макету */
-
-    --main-font: 'Roboto',
-        sans-serif;
-    --logo-font: 'Raleway',
-        sans-serif;
+  --main-font: "Roboto", sans-serif;
+  --logo-font: "Raleway", sans-serif;
 }
 
 h1,
@@ -29,504 +27,654 @@ h5,
 h6,
 p,
 ul {
-    margin: 0;
+  margin: 0;
 }
 
 img {
-    display: block;
+  display: block;
 }
 
 .container {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin: 0 auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
 }
 
-
-.navigation, .info {
-    display: flex;
-    align-items: center;
+.navigation,
+.info {
+  display: flex;
+  align-items: center;
 }
 
 .navigation {
-    margin-right: auto;
+  margin-right: auto;
 }
 
-
 .body {
-    font-family: 'Roboto',sans-serif;
-    color: var(--grey-txt-clr);
-    font-size: 14px;
-    letter-spacing: 0.03em;
+  font-family: "Roboto", sans-serif;
+  color: var(--grey-txt-clr);
+  font-size: 14px;
+  letter-spacing: 0.03em;
 }
 
 .header {
-    border-bottom: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 
 .header-container {
-    display: flex;
-    align-items: center;
-    margin-right: auto;
-    padding: 32px 0;
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+  padding: 32px 0;
 }
 
 .webt {
-    font-family: var(--logo-font);
-        font-weight: 700;
-        font-size: 26px;
-        line-height: 1.19;
-        /* identical to box height */
-    
-        letter-spacing: 0.03em;
-    
-        color: var(--main-clr);
-    
+  font-family: var(--logo-font);
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  /* identical to box height */
+
+  letter-spacing: 0.03em;
+
+  color: var(--main-clr);
 }
 
 .web {
-        font-family: var(--logo-font);
-        font-weight: 700;
-        font-size: 26px;
-        line-height: 1.19;
-        /* identical to box height */
-        
-        letter-spacing: 0.03em;
-        color: var(--dark-clr);
-        text-decoration: none;
-        margin-right: 92px;
+  font-family: var(--logo-font);
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  /* identical to box height */
+
+  letter-spacing: 0.03em;
+  color: var(--dark-clr);
+  text-decoration: none;
+  margin-right: 92px;
 }
 
-.headerlist, .info {
-    list-style: none;
-    display: flex;
-    gap: 50px;
-    padding: 0;
+.headerlist,
+.info {
+  list-style: none;
+  display: flex;
+  gap: 50px;
+  padding: 0;
 }
 
-.studio, .port, .cont, .mail, .tel {
-    text-decoration: none;
-    color: inherit;
-    padding: 32px 0;
+.studio,
+.port,
+.cont,
+.mail,
+.tel {
+  text-decoration: none;
+  color: inherit;
+  padding: 32px 0;
 }
 
 .studio {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--dark-txt-clr);
-    text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--dark-txt-clr);
+  text-decoration: none;
 }
 
 .studio.current {
-    color: var(--main-clr);
+  color: var(--main-clr);
 }
 
 .studio:hover {
-    color: var(--main-clr);
+  color: var(--main-clr);
 }
 
 .port {
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.02em;
-        color: var(--dark-txt-clr);
-        text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--dark-txt-clr);
+  text-decoration: none;
 }
 
 .port.current {
-    color: var(--main-clr);
+  color: var(--main-clr);
 }
 
 .port:hover {
-    color: var(--main-clr);
+  color: var(--main-clr);
 }
 
 .cont {
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.02em;
-        color: var(--dark-txt-clr);
-        text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--dark-txt-clr);
+  text-decoration: none;
 }
 
 .cont:hover {
-   color: var(--main-clr);
+  color: var(--main-clr);
 }
 
 .mail {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-color: var(--grey-txt-clr);
-text-decoration: none;
-padding: 32px 0;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--grey-txt-clr);
+  text-decoration: none;
+  padding: 32px 0;
+  fill: var(--grey-txt-clr);
 }
 
-
 .mail:hover {
-    color: var(--main-clr);
+  color: var(--main-clr);
+  fill: var(--main-clr);
 }
 
 .tel {
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.02em;
-        color: var(--grey-txt-clr);
-        text-decoration: none;
-        padding: 32px 0;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--grey-txt-clr);
+  text-decoration: none;
+  padding: 32px 0;
+  fill: var(--grey-txt-clr);
+
 }
 
 .tel:hover {
-    color: var(--main-clr);
-}
+  color: var(--main-clr);
+  fill: var(--main-clr);
 
+}
 
 .main-info {
-    background-color: var(--dark-grey-clr);
-    padding-top: 200px;
-    padding-bottom: 200px;
+  background-color: var(--dark-grey-clr);
+  padding-top: 200px;
+  padding-bottom: 200px;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/business.jpg);
+background-size: cover;
 }
 
-
 .view {
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    /* or 136% */
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  /* or 136% */
 
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: var(--light-txt-clr);
-    flex-wrap: wrap;
-    width: 696px;
-    margin: 0 auto 30px;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--light-txt-clr);
+  flex-wrap: wrap;
+  width: 696px;
+  margin: 0 auto 30px;
 }
 
 .main-btn {
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.87;
-        /* identical to box height, or 188% */
-    
-        display: flex;
-        align-items: center;
-        text-align: center;
-        cursor: pointer;
-        color: var(--light-txt-clr);
-        background-color: var(--main-clr);
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-        border-radius: 4px;
-        padding: 10px 32px;
-        border: transparent;
-        width: 216px;
-        margin: 0 auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  /* identical to box height, or 188% */
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+  cursor: pointer;
+  color: var(--light-txt-clr);
+  background-color: var(--main-clr);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  padding: 10px 32px;
+  border: transparent;
+  width: 216px;
+  margin: 0 auto;
 }
 
 .main-btn:hover {
-    background-color: var(--btn-clr);
+  background-color: var(--btn-clr);
 }
 
 .benefit-container {
-    display: flex;
+  display: flex;
 }
 
 .benefits {
-    padding: 94px 0;
+  padding: 94px 0;
 }
 
 .benefit-list {
-    display: flex;
-    gap: 30px;
-    padding-left: 0;
+  display: flex;
+  gap: 30px;
+  padding-left: 0;
 }
 
 .our-benefits {
-    display: none;
+  display: none;
 }
 
+.detail {
+    width: 270px;
+height: 120px;
+background-color: var(--light-grey-clr);
+display: flex;
+justify-content: center;
+align-items: center;
+margin-bottom: 30px;
+}
 
 .benefits-sum {
-    list-style: none;
-    width: 270px;
-    
+  list-style: none;
+  width: 270px;
 }
 
 .benefits-title {
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: var(--dark-txt-clr);
-        text-decoration: none;
-        margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--dark-txt-clr);
+  text-decoration: none;
+  margin-bottom: 10px;
 }
 
 .benefits-text {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    /* or 171% */
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  /* or 171% */
 
-    letter-spacing: 0.03em;
-    color: var(--grey-txt-clr);
-    gap: 30px;
+  letter-spacing: 0.03em;
+  color: var(--grey-txt-clr);
+  gap: 30px;
 }
 
 .images {
-    padding-bottom: 94px;
+  padding-bottom: 94px;
 }
 
 .images-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-
 .images-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--dark-txt-clr);
-    margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--dark-txt-clr);
+  margin-bottom: 50px;
 }
 
 .images-list {
-    list-style: none;
-    display: flex;
-    gap: 30px;
-    padding: 0;
+  list-style: none;
+  display: flex;
+  gap: 30px;
+  padding: 0;
 }
 .team {
-background-color: var(--light-grey-clr);
+  background-color: var(--light-grey-clr);
 }
 
 .person-container {
-padding-top: 94px;
-padding-bottom: 94px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .person-list {
-    list-style: none;
-    display: flex;
-    gap: 30px;
-    padding: 0;
+  list-style: none;
+  display: flex;
+  gap: 30px;
+  padding: 0;
 }
 
-
 .person-team {
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 1.16;
-        text-align: center;
-        letter-spacing: 0.03em;
-        color: var(--dark-txt-clr);
-        margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--dark-txt-clr);
+  margin-bottom: 50px;
 }
 
 .person-text {
-    background-color: #FFFFFF;
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
+
 }
 
 .names {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.18;
-    /* identical to box height */
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  /* identical to box height */
 
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--dark-txt-clr);
-    padding-top: 30px;
-    margin-bottom: 10px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--dark-txt-clr);
+  margin-bottom: 10px;
 }
 
 .team-text {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.18;
-    /* identical to box height */
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.18;
+  /* identical to box height */
 
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--grey-txt-clr);
-    padding-bottom: 30px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--grey-txt-clr);
 }
 
+.social-cont {
+    padding: 30px 0;
+}
+
+.social {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    gap: 10px;
+    margin-bottom: 30px;
+
+}
+
+.social-item {
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+}
+
+.social-link {
+width: 44px;
+height: 44px;
+background-color: var(--light-txt-clr);
+border-radius: 50%;
+fill: var(--icon-color);
+display: flex;
+justify-content: center;
+align-items: center;
+cursor: pointer;
+margin-top: 16px;
+}
+
+.social-link:hover,
+.social-link:focus {
+    background-color: var(--main-clr);
+    fill: var(--light-txt-clr);
+}
+
+.clients {
+    padding: 94px 0;
+}
+
+.clients-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: calc(42 / 36);
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+    color: var(--dark-txt-clr);
+}
+
+.clients-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    gap: 30px;
+    
+}
+
+.clients-item {
+
+}
+
+.clients-link {
+    cursor: pointer;
+    fill: var(--icon-color);
+    width: 170px;
+    height: 92px;
+    border: 1px solid #afb1b8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+}
+
+.clients-link:hover,
+.clients-link:focus {
+fill: var(--main-clr);
+border: 1px solid var(--main-clr);}
+
 .footer-container {
-    padding: 60px 0;
+  padding: 60px 0;
+  display: flex;
+}
+
+.footer-address {
+    margin-right: 70px;
 }
 
 .footer {
-background-color: var(--dark-grey-clr);
+  background-color: var(--dark-grey-clr);
 }
 
 .footer-web {
-font-family: var(--logo-font);
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    /* identical to box height */
+  font-family: var(--logo-font);
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  /* identical to box height */
 
-    letter-spacing: 0.03em;
-    color: var(--light-txt-clr);
-    text-decoration: none;
-    display: inline-block;
-    margin-bottom: 20px;
+  letter-spacing: 0.03em;
+  color: var(--light-txt-clr);
+  text-decoration: none;
+  display: inline-block;
+  margin-bottom: 20px;
+  font-style: normal;
 }
 
 .footer-nav {
-list-style: none;
-padding-left: 0;
+  list-style: none;
+  padding-left: 0;
 }
 
 .footer-text {
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 1.71;
-        /* or 171% */
-    
-        letter-spacing: 0.03em;
-        color: var(--light-txt-clr);
-        text-decoration: none;
-        margin-bottom: 9px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  /* or 171% */
+
+  letter-spacing: 0.03em;
+  color: var(--light-txt-clr);
+  text-decoration: none;
+  margin-bottom: 9px;
 }
 
 .footer-text:last-child {
-    margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 .footer-text:hover {
-color: var(--main-clr);
+  color: var(--main-clr);
 }
 
 .footer-mail {
-    font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 1.71;
-        /* or 171% */
-    
-        letter-spacing: 0.03em;
-        color: var(--foot-grey-clr);
-        text-decoration: none;
-        display: inline-block;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  /* or 171% */
+
+  letter-spacing: 0.03em;
+  color: var(--foot-grey-clr);
+  text-decoration: none;
+  display: inline-block;
 }
 
 .footer-mail:hover {
-    color: var(--main-clr);
+  color: var(--main-clr);
 }
 
 .footer-tel {
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 1.71;
-        /* or 171% */
-    
-        letter-spacing: 0.03em;
-        color: var(--foot-grey-clr);
-        text-decoration: none;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  /* or 171% */
+
+  letter-spacing: 0.03em;
+  color: var(--foot-grey-clr);
+  text-decoration: none;
 }
 
 .footer-tel:hover {
-    color: var(--main-clr);
+  color: var(--main-clr);
+}
+
+.footer-cont {
+
+}
+
+
+.footer-title {
+    text-transform: uppercase;
+    padding-top: 12px;
+    color: var(--light-txt-clr);
+}
+
+.footer-list {
+    list-style: none;
+    display: flex;
+    padding: 0;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.footer-item {
+
+}
+
+.footer-link {
+width: 44px;
+height: 44px;
+background-color: rgba(255, 255, 255, 0.1);
+border-radius: 50%;
+display: flex;
+justify-content: center;
+align-items: center;
+fill: var(--light-txt-clr);
+}
+
+.footer-link:hover, 
+.footer-link:focus {
+    background-color: var(--main-clr);
+    fill: var(--light-txt-clr);
 }
 
 .section-port {
-    padding-top: 94px;
-    padding-bottom: 94px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .port-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .port-title {
-    display: none;
+  display: none;
 }
 
 .port-btns {
-    list-style: none;
-    display: flex;
-    gap: 8px;
-    padding-left: 0;
-    margin-bottom: 50px;
+  list-style: none;
+  display: flex;
+  gap: 8px;
+  padding-left: 0;
+  margin-bottom: 50px;
 }
 
 .port-btn {
-    cursor: pointer;
-    background-color: var(--light-grey-clr);
-    border: 0;
-    font-weight: 500;
-    font-size: 16px;
-    font-family: inherit;
-    line-height: 1.62;
-    text-align: center;
-    letter-spacing: 0.03em;
-    border: transparent;
-    border-radius: 4px;
-    padding: 6px 25px;
+  cursor: pointer;
+  background-color: var(--light-grey-clr);
+  border: 0;
+  font-weight: 500;
+  font-size: 16px;
+  font-family: inherit;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  border: transparent;
+  border-radius: 4px;
+  padding: 6px 25px;
 }
 
 .port-btn:hover,
 .port-btn:focus {
-    background-color: var(--main-clr);
-    color: var(--light-txt-clr);
+  background-color: var(--main-clr);
+  color: var(--light-txt-clr);
 }
 
 .port-items {
-display: flex;
-flex-wrap: wrap;
-gap: 30px;
-padding: 0 0 94px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  padding: 0 0 94px;
 }
 
 .port-div {
-    padding: 20px 24px;
-    border-right: 1px solid #EEEEEE;
-    border-left: 1px solid #EEEEEE;
-    border-bottom: 1px solid #EEEEEE;
+  padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
 }
 
 .port-item {
-    list-style: none;
-    background: #FFFFFF;
-    border: 0 solid #EEEEEE;
+  list-style: none;
+  background: #ffffff;
+  border: 0 solid #eeeeee;
+}
+
+.port-item:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .port-link,
 .port-link:focus {
-    text-decoration: none;
-    color: inherit;
-    color: var(--dark-txt-clr);
+  text-decoration: none;
+  color: inherit;
+  color: var(--dark-txt-clr);
 }
 
 .port-titles {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 }
 
 .port-text {
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.03em;
-    color: var(--grey-txt-clr);
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: var(--grey-txt-clr);
 }
